# boosty-rs

./: Cargo.toml  README.md
src/: auth.rs  lib.rs  request.rs  types.rs
src/boosty/: mod.rs  request.rs  types.rs
src/gelbooru/: mod.rs  request.rs  types.rs
