[package]
name = "boosty-rs"
version = "0.1.7"
edition = "2021"
description = "A Rust library for Boosty closed API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/crptmem/boosty-rs"

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
