[package]
name = "imgdl-rs"
version = "1.2.0"
edition = "2021"
description = "A Rust library for downloading images from services like Boosty and Gelbooru"
license = "MIT"
readme = "README.md"
repository = "https://github.com/crptmem/imgdl-rs"

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.12.5", features = ["json", "socks"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
